// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Tabs Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<ul color=\\"purple\\" class=\\"drac-tabs drac-tabs-purple\\">
  <li class=\\"drac-tab drac-tab-active\\">
    <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
  </li>
  <li class=\\"drac-tab\\">
    <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
  </li>
  <li class=\\"drac-tab\\">
    <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
  </li>
</ul>
",
  "react": "<Tabs color=\\"purple\\">
  <li className=\\"drac-tab drac-tab-active\\">
    <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
      Item One
    </a>
  </li>
  <li className=\\"drac-tab\\">
    <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
      Item Two
    </a>
  </li>
  <li className=\\"drac-tab\\">
    <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
      Item Three
    </a>
  </li>
</Tabs>;
",
  "title": "Usage",
}
`;

exports[`Site: Tabs Colors 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column\\">
  <ul color=\\"white\\" class=\\"drac-tabs drac-tabs-white\\">
    <li class=\\"drac-tab drac-tab-active\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
    </li>
  </ul>
  <ul color=\\"cyan\\" class=\\"drac-tabs drac-tabs-cyan\\">
    <li class=\\"drac-tab drac-tab-active\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
    </li>
  </ul>
  <ul color=\\"green\\" class=\\"drac-tabs drac-tabs-green\\">
    <li class=\\"drac-tab drac-tab-active\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
    </li>
  </ul>
  <ul color=\\"orange\\" class=\\"drac-tabs drac-tabs-orange\\">
    <li class=\\"drac-tab drac-tab-active\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
    </li>
  </ul>
  <ul color=\\"pink\\" class=\\"drac-tabs drac-tabs-pink\\">
    <li class=\\"drac-tab drac-tab-active\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
    </li>
  </ul>
  <ul color=\\"purple\\" class=\\"drac-tabs drac-tabs-purple\\">
    <li class=\\"drac-tab drac-tab-active\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
    </li>
  </ul>
  <ul color=\\"red\\" class=\\"drac-tabs drac-tabs-red\\">
    <li class=\\"drac-tab drac-tab-active\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
    </li>
  </ul>
  <ul color=\\"yellow\\" class=\\"drac-tabs drac-tabs-yellow\\">
    <li class=\\"drac-tab drac-tab-active\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
    </li>
    <li class=\\"drac-tab\\">
      <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
    </li>
  </ul>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\" }}>
  <Tabs color=\\"white\\">
    <li className=\\"drac-tab drac-tab-active\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item One
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Two
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Three
      </a>
    </li>
  </Tabs>
  <Tabs color=\\"cyan\\">
    <li className=\\"drac-tab drac-tab-active\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item One
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Two
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Three
      </a>
    </li>
  </Tabs>
  <Tabs color=\\"green\\">
    <li className=\\"drac-tab drac-tab-active\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item One
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Two
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Three
      </a>
    </li>
  </Tabs>
  <Tabs color=\\"orange\\">
    <li className=\\"drac-tab drac-tab-active\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item One
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Two
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Three
      </a>
    </li>
  </Tabs>
  <Tabs color=\\"pink\\">
    <li className=\\"drac-tab drac-tab-active\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item One
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Two
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Three
      </a>
    </li>
  </Tabs>
  <Tabs color=\\"purple\\">
    <li className=\\"drac-tab drac-tab-active\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item One
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Two
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Three
      </a>
    </li>
  </Tabs>
  <Tabs color=\\"red\\">
    <li className=\\"drac-tab drac-tab-active\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item One
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Two
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Three
      </a>
    </li>
  </Tabs>
  <Tabs color=\\"yellow\\">
    <li className=\\"drac-tab drac-tab-active\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item One
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Two
      </a>
    </li>
    <li className=\\"drac-tab\\">
      <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
        Item Three
      </a>
    </li>
  </Tabs>
</div>;
",
  "title": "Colors",
}
`;
